traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:25: error: not found: value nbDIag
    for (compt <- 1 to (nbDIag - diag)) {
                        ^